--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 
 [dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
+thiserror = { version = "1.0.64", registry = "phylum" }
