--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 
 [dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
-indexmap = { version = "2.5.0", registry = "phylum" }
-thiserror = { version = "1.0.64", registry = "phylum" }
+indexmap = { version = "2.5.0" }
+thiserror = { version = "1.0.64" }
