--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 
 [dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
+console = "0.15.8"
 indexmap = { version = "2.5.0" }
 thiserror = { version = "1.0.64" }
