--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2018"
 [dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
 console = "0.15.8"
+env_logger = { version = "0.11.5", features = ["unstable-kv"] }
 indexmap = { version = "2.5.0" }
+log = { version = "0.4.22", features = ["kv"] }
 thiserror = { version = "1.0.64" }
